<resources>
    <string name="app_name">酷云</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="confirm">OK</string>
    <string name="cancel">取消</string>
    <string name="xuejianxin_gq">http://xuejianxin.gq</string>
    <string name="http_weibo_com_5826249790_profile_topnav_1_wvr_6_is_all_1">uri</string>
    <string name="my">我</string>
    <string name="inform">通知</string>
    <string name="comment">评论</string>
    <string name="personal">私信</string>
    <string name="blog">博客：http://blog.csdn.net/jim__charles</string>
    <string name="skills">技能 ： Android开发、Javaweb、Java等</string>
    <string name="website">网站：http://xuejianxin.xyz</string>
    <string name="github">Github：https://github.com/xuejianxin</string>
    <string name="zhihu">知乎：https://www.zhihu.com/people/jim-charles-56/pins/posts</string>
    <string name="scan">扫码关注我的公众号</string>
    <string name="deatil">及时获取最新Android、Java以及各种科技信息</string>
    <string name="student">职位 ：大二学生</string>
    <string name="introduce">简介 ：一名Android开发者</string>
    <string name="auto">Auto : All things are difficult before they are easy.</string>
    <string name="name">笔名 ：JimCharles、Androxue</string>
    <string name="developer">开发者 ：薛建新</string>
    <string name="about">关于作者</string>
    <string name="cloud_music">酷云，你最贴心的音乐助手</string>
    <string name="message">我的消息</string>
    <string name="author">关于笔者</string>
    <string name="search">搜索音乐、歌手、歌词、用户</string>
    <string name="sort">歌手分类</string>
    <string name="search_hot">热门搜索</string>
    <string name="father">父亲写的散文诗</string>
    <string name="shape_of_you">Shape of you</string>
    <string name="something_just_like_this">Something Just Like This</string>
    <string name="baby">宝贝</string>
    <string name="met_you">刚好遇见你</string>
    <string name="xue_zhi_qian">薛之谦</string>
    <string name="action_setting">Share</string>
    <string name="Linken_garden">林肯公园</string>
    <string name="chen_yi_xun">陈奕迅</string>
    <string name="zhou_jie_lun">周杰伦</string>
    <string name="personality">个性化推荐</string>
    <string name="music_list">歌单</string>
    <string name="radio">主播电台</string>
    <string name="rank">排行榜</string>
    <string name="user_name">Androxue</string>
    <string name="music_cloud">音乐云盘</string>
    <string name="head_in">上传管理</string>
    <string name="my_friend">我的好友</string>
    <string name="concentrate">关注</string>
    <string name="fens">粉丝</string>
    <string name="near">附近的人</string>
    <string name="skin">个性换肤</string>
    <string name="night_mode">夜间模式</string>
    <string name="ic_scan">扫一扫</string>
    <string name="music_clock">音乐闹钟</string>
    <string name="drive">驾驶模式</string>
    <string name="contact">联系</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="add_friend">添加好友</string>
    <string name="people">认识的人（7）</string>
    <string name="start">明星用户（448）</string>
    <string name="music_people">音乐人（997）</string>
    <string name="cityofstar">city of star</string>
    <string name="queue_is_empty">播放队列为空</string>
</resources>
