<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <RelativeLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

                <ImageView
                    android:id="@+id/draw"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_draw"
                    android:clickable="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <ImageView
                    android:id="@+id/bar_net"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/actionbar_disco"
                    android:clickable="true"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/draw"
                    android:layout_marginStart="60dp" />

                <ImageView
                    android:id="@+id/bar_music"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/actionbar_music"
                    android:clickable="true"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/bar_net" />

                <ImageView
                    android:id="@+id/bar_friends"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/actionbar_friends"
                    android:clickable="true"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/bar_music" />

                <ImageView
                    android:id="@+id/bar_search"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="center"
                    android:background="@drawable/actionbar_search"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="50dp" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center">

            <TextView
                android:id="@+id/personal_intro"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/personality"
                android:textSize="@dimen/normal" />

            <TextView
                android:id="@+id/music_list"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/music_list"
                android:textSize="@dimen/normal" />

            <TextView
                android:id="@+id/radio"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/radio"
                android:textSize="@dimen/normal" />

            <TextView
                android:id="@+id/rank"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/rank"
                android:textSize="@dimen/normal" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="#fafafa"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>
